--- a/git-config-server-service/src/main/resources/application.yml
+++ b/git-config-server-service/src/main/resources/application.yml
@@ -11,4 +11,4 @@ spring:
           default-label: main
           skip-ssl-validation: true
           username: MuhittinUlker
-          password: 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
+          password: mypass
